5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1712_2507.log
== SUBMITION (2019-05-15 10:01:15) 
-- CODE:
p1=int(input("percentual de crescimento mensal: "))
a=q1
t=0
while (a < 8000) and (a > 0):
	t=t + 1
	qv+int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
if(a >= 8000):
	print("MAXIMO")
else:
	print("ZERO")
print(t)
	
-- EXECUTION TIME:
0.132421
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 2, in <module>
    a=q1
NameError: name 'q1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:01:58) 
-- CODE:
p1=int(input("percentual de crescimento mensal: "))
a=q1
t=0
while (a < 8000) and (a > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
if(a >= 8000):
	print("MAXIMO")
else:
	print("ZERO")
print(t)
	
-- EXECUTION TIME:
0.119997
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 2, in <module>
    a=q1
NameError: name 'q1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:02:02) 
-- CODE:
p1=int(input("percentual de crescimento mensal: "))
a=q1
t=0
while (a < 8000) and (a > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
if(a >= 8000):
	print("MAXIMO")
else:
	print("ZERO")
print(t)
	
-- EXECUTION TIME:
0.144785
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 2, in <module>
    a=q1
NameError: name 'q1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:02:50) 
-- CODE:
p1=int(input("percentual de crescimento mensal: "))
a=q1
t=0
while (a < 8000) and (a > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
if(a >= 8000):
	print("MAXIMO")
else :
	print("ZERO")
print(t)
	
-- EXECUTION TIME:
0.197843
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 2, in <module>
    a=q1
NameError: name 'q1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:02:52) 
-- CODE:
p1=int(input("percentual de crescimento mensal: "))
a=q1
t=0
while (a < 8000) and (a > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
if(a >= 8000):
	print("MAXIMO")
else :
	print("ZERO")
print(t)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a=q1
NameError: name 'q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:04:08) 
-- CODE:
q1=int(input("percentual de crescimento mensal: "))
a=q1
t=0
while (a < 8000) and (a > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
if(a >= 8000):
	print("MAXIMO")
else :
	print("ZERO")
print(t)
	
-- EXECUTION TIME:
0.147186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 7, in <module>
    a=a + (a * (p1 / 100))
NameError: name 'p1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:04:09) 
-- CODE:
q1=int(input("percentual de crescimento mensal: "))
a=q1
t=0
while (a < 8000) and (a > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
if(a >= 8000):
	print("MAXIMO")
else :
	print("ZERO")
print(t)
	
-- EXECUTION TIME:
0.151426
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 7, in <module>
    a=a + (a * (p1 / 100))
NameError: name 'p1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:04:28) 
-- CODE:
p1=int(input("percentual de crescimento mensal: "))
a=p1
t=0
while (a < 8000) and (a > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
if(a >= 8000):
	print("MAXIMO")
else :
	print("ZERO")
print(t)
	
-- EXECUTION TIME:
0.136164
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
1
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
MAXIMO
1
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:04:30) 
-- CODE:
p1=int(input("percentual de crescimento mensal: "))
a=p1
t=0
while (a < 8000) and (a > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
if(a >= 8000):
	print("MAXIMO")
else :
	print("ZERO")
print(t)
	
-- EXECUTION TIME:
0.179189
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
1
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
MAXIMO
1
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:04:32) 
-- CODE:
p1=int(input("percentual de crescimento mensal: "))
a=p1
t=0
while (a < 8000) and (a > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
if(a >= 8000):
	print("MAXIMO")
else :
	print("ZERO")
print(t)
	
-- OUTPUT:
MAXIMO
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:05:38) 
-- CODE:
p1=int(input("percentual de crescimento mensal: "))
a=p1
t=0
while (a < 8000) and (a > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
if(a >= 8000):
	print("MAXIMO")
else :
	print("ZERO")
print(t)
	
-- OUTPUT:
MAXIMO
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:11:00) 
-- CODE:
qt = int(input())
pt = float(input())
t=0
while(qt < 8000 and qt > 0):
	qv = int(input())
	qt = qt + ((qt * pt) / 100) - qv
	ta = ta + 1
if(qt >=8000):
	print("MAXIMO")
elif(qt <= 0):
	print("ZERO")
print(ta)
	
-- EXECUTION TIME:
0.181478
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 7, in <module>
    ta = ta + 1
NameError: name 'ta' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:11:02) 
-- CODE:
qt = int(input())
pt = float(input())
t=0
while(qt < 8000 and qt > 0):
	qv = int(input())
	qt = qt + ((qt * pt) / 100) - qv
	ta = ta + 1
if(qt >=8000):
	print("MAXIMO")
elif(qt <= 0):
	print("ZERO")
print(ta)
	
-- EXECUTION TIME:
0.179548
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 7, in <module>
    ta = ta + 1
NameError: name 'ta' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:11:03) 
-- CODE:
qt = int(input())
pt = float(input())
t=0
while(qt < 8000 and qt > 0):
	qv = int(input())
	qt = qt + ((qt * pt) / 100) - qv
	ta = ta + 1
if(qt >=8000):
	print("MAXIMO")
elif(qt <= 0):
	print("ZERO")
print(ta)
	
-- EXECUTION TIME:
0.16254
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 7, in <module>
    ta = ta + 1
NameError: name 'ta' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:11:03) 
-- CODE:
qt = int(input())
pt = float(input())
t=0
while(qt < 8000 and qt > 0):
	qv = int(input())
	qt = qt + ((qt * pt) / 100) - qv
	ta = ta + 1
if(qt >=8000):
	print("MAXIMO")
elif(qt <= 0):
	print("ZERO")
print(ta)
	
-- EXECUTION TIME:
0.150378
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 7, in <module>
    ta = ta + 1
NameError: name 'ta' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:11:03) 
-- CODE:
qt = int(input())
pt = float(input())
t=0
while(qt < 8000 and qt > 0):
	qv = int(input())
	qt = qt + ((qt * pt) / 100) - qv
	ta = ta + 1
if(qt >=8000):
	print("MAXIMO")
elif(qt <= 0):
	print("ZERO")
print(ta)
	
-- EXECUTION TIME:
0.162298
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 7, in <module>
    ta = ta + 1
NameError: name 'ta' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:11:30) 
-- CODE:
qt = int(input())
pt = float(input())
ta=0
while(qt < 8000 and qt > 0):
	qv = int(input())
	qt = qt + ((qt * pt) / 100) - qv
	ta = ta + 1
if(qt >=8000):
	print("MAXIMO")
elif(qt <= 0):
	print("ZERO")
print(ta)
	
-- EXECUTION TIME:
0.152801
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
